# claude-code-haha

./: .gitignore  README.md  package.json  pnpm-lock.yaml
python/: .env.example  .gitignore  README.md  pyproject.toml
python/examples/.claude/skills/: code-review.md  commit-message.md
python/src/claude_code/: __init__.py  __main__.py  cli.py
python/src/claude_code/api/: __init__.py  client.py  factory.py
python/src/claude_code/core/: __init__.py  agent.py  context.py  types.py
python/src/claude_code/mcp/: __init__.py  client.py  transport.py
python/src/claude_code/skills/: __init__.py  loader.py
python/src/claude_code/tools/: __init__.py  base.py  builtin.py  permissions.py
python/src/claude_code/ui/: __init__.py  console.py
python/tests/: __init__.py  test_agent.py  test_mcp_transport.py  test_skills_loader.py  test_tool_registry.py
src/components/: LlmSetup.tsx  Onboarding.tsx
src/components/Settings/: Config.tsx
src/services/api/: client.ts
src/utils/: config.ts
