[project]
name = "claude-code-py"
version = "0.1.0"
description = "A simple, well-structured Python implementation of Claude Code architecture (agent loop, tool system, MCP, skills)."
requires-python = ">=3.10"
authors = [{ name = "claude-code-py" }]
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "anthropic>=0.39.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
claude-code-py = "claude_code.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
